// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RSVP block reducer should set the capacity 1`] = `
Object {
  "capacity": 20,
  "created": false,
  "description": "",
  "endDate": "July 19, 2018",
  "endTime": "19:30",
  "headerImageAlt": "",
  "headerImageSrc": "",
  "notGoingResponses": false,
  "settingsOpen": false,
  "startDate": "July 19, 2018",
  "startTime": "19:30",
  "title": "",
}
`;

exports[`RSVP block reducer should set the created flag 1`] = `
Object {
  "capacity": "",
  "created": true,
  "description": "",
  "endDate": "July 19, 2018",
  "endTime": "19:30",
  "headerImageAlt": "",
  "headerImageSrc": "",
  "notGoingResponses": false,
  "settingsOpen": false,
  "startDate": "July 19, 2018",
  "startTime": "19:30",
  "title": "",
}
`;

exports[`RSVP block reducer should set the description 1`] = `
Object {
  "capacity": "",
  "created": false,
  "description": "new description",
  "endDate": "July 19, 2018",
  "endTime": "19:30",
  "headerImageAlt": "",
  "headerImageSrc": "",
  "notGoingResponses": false,
  "settingsOpen": false,
  "startDate": "July 19, 2018",
  "startTime": "19:30",
  "title": "",
}
`;

exports[`RSVP block reducer should set the end date 1`] = `
Object {
  "capacity": "",
  "created": false,
  "description": "",
  "endDate": "January 1, 2018",
  "endTime": "19:30",
  "headerImageAlt": "",
  "headerImageSrc": "",
  "notGoingResponses": false,
  "settingsOpen": false,
  "startDate": "July 19, 2018",
  "startTime": "19:30",
  "title": "",
}
`;

exports[`RSVP block reducer should set the end time 1`] = `
Object {
  "capacity": "",
  "created": false,
  "description": "",
  "endDate": "July 19, 2018",
  "endTime": "13:45",
  "headerImageAlt": "",
  "headerImageSrc": "",
  "notGoingResponses": false,
  "settingsOpen": false,
  "startDate": "July 19, 2018",
  "startTime": "19:30",
  "title": "",
}
`;

exports[`RSVP block reducer should set the header image alt 1`] = `
Object {
  "capacity": "",
  "created": false,
  "description": "",
  "endDate": "July 19, 2018",
  "endTime": "19:30",
  "headerImageAlt": "test-alt",
  "headerImageSrc": "",
  "notGoingResponses": false,
  "settingsOpen": false,
  "startDate": "July 19, 2018",
  "startTime": "19:30",
  "title": "",
}
`;

exports[`RSVP block reducer should set the header image src 1`] = `
Object {
  "capacity": "",
  "created": false,
  "description": "",
  "endDate": "July 19, 2018",
  "endTime": "19:30",
  "headerImageAlt": "",
  "headerImageSrc": "test-src",
  "notGoingResponses": false,
  "settingsOpen": false,
  "startDate": "July 19, 2018",
  "startTime": "19:30",
  "title": "",
}
`;

exports[`RSVP block reducer should set the not going responses 1`] = `
Object {
  "capacity": "",
  "created": false,
  "description": "",
  "endDate": "July 19, 2018",
  "endTime": "19:30",
  "headerImageAlt": "",
  "headerImageSrc": "",
  "notGoingResponses": true,
  "settingsOpen": false,
  "startDate": "July 19, 2018",
  "startTime": "19:30",
  "title": "",
}
`;

exports[`RSVP block reducer should set the settings open 1`] = `
Object {
  "capacity": "",
  "created": false,
  "description": "",
  "endDate": "July 19, 2018",
  "endTime": "19:30",
  "headerImageAlt": "",
  "headerImageSrc": "",
  "notGoingResponses": false,
  "settingsOpen": true,
  "startDate": "July 19, 2018",
  "startTime": "19:30",
  "title": "",
}
`;

exports[`RSVP block reducer should set the start date 1`] = `
Object {
  "capacity": "",
  "created": false,
  "description": "",
  "endDate": "July 19, 2018",
  "endTime": "19:30",
  "headerImageAlt": "",
  "headerImageSrc": "",
  "notGoingResponses": false,
  "settingsOpen": false,
  "startDate": "January 1, 2018",
  "startTime": "19:30",
  "title": "",
}
`;

exports[`RSVP block reducer should set the start time 1`] = `
Object {
  "capacity": "",
  "created": false,
  "description": "",
  "endDate": "July 19, 2018",
  "endTime": "19:30",
  "headerImageAlt": "",
  "headerImageSrc": "",
  "notGoingResponses": false,
  "settingsOpen": false,
  "startDate": "July 19, 2018",
  "startTime": "13:45",
  "title": "",
}
`;

exports[`RSVP block reducer should set the title 1`] = `
Object {
  "capacity": "",
  "created": false,
  "description": "",
  "endDate": "July 19, 2018",
  "endTime": "19:30",
  "headerImageAlt": "",
  "headerImageSrc": "",
  "notGoingResponses": false,
  "settingsOpen": false,
  "startDate": "July 19, 2018",
  "startTime": "19:30",
  "title": "new title",
}
`;
